# RustPTA

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  at_1  dl_1  dl_3.rlink  doc.md  docker-compose.yml  dr_1  limition.md  rust-toolchain.toml  tiny_mutex  技术报告.md
.zed/: settings.json
async_example/no_await/: Cargo.toml
benchmarks/: collect_benchmarks.sh  gen_cases.sh  gen_cir.sh  run_benchmarks.sh
doc/: 技术报告.md
docs/: 01-architecture.md  02-mir-to-petri-net.md  cir_extraction.md  memory_watcher_guide.md  petri_net_to_cir.md
docs/en/: 03-sync-primitives.md  04-analysis-detection.md
docs/zh/: 01-architecture.md  02-mir-to-petri-net.md  03-sync-primitives.md  04-analysis-detection.md
example/address_reuse/: Cargo.toml
example/atomic_acquire_w/: Cargo.toml
example/atomic_se/: Cargo.toml
example/channel_lock/: Cargo.toml
example/condvar_lock/: Cargo.toml
example/data-race-miri/: Cargo.toml
example/data_race/: Cargo.toml  data_race_report.txt
example/deadlock-lib/: Cargo.toml
example/disable_dr/: Cargo.toml
example/double_lock/: Cargo.toml  output.lola
example/handle_vec/: Cargo.toml
example/intra/: Cargo.toml
example/local_deadlock/: Cargo.toml
example/lock-closure/: Cargo.toml
example/motivate_example/: Cargo.toml  a.txt
example/mutex-leak/: Cargo.toml
example/never_stop/: Cargo.toml
example/rayon-deadlock/: Cargo.toml
example/rayon-periter/: Cargo.toml
example/rayon-rwlock/: Cargo.toml
example/safe_shared_data/: Cargo.toml
example/scope_thread/: Cargo.toml
example/spin_loop/: Cargo.toml
example/sync_nopreempt/: Cargo.toml
example/sync_singlethread/: Cargo.toml
example/thousands_code/: Cargo.toml
example/tokio_lock/: Cargo.toml
examples/: .gitignore  Cargo.toml  README.md  memory_watcher_demo.rs
examples/src/: main.rs
scripts/: check_pn_case.sh  run_benchmarks.sh  run_web_viewer.sh
skills/mir2pnml_py/: README.md  mir2pnml.py  mir_model.py  mir_parser.py  pn_builder.py  pn_model.py  pnml_writer.py  skill.md
src/: callback.rs  config.rs  lib.rs  main.rs  options.rs  report.rs  utils.rs
src/analysis/: boundness.rs  condvar.rs  controldep.rs  datadep.rs  defuse.rs  lock.rs  mod.rs  pointer_analysis.rs  pointsto.rs  pointsto_inter.rs  pointstocs.rs  postdom.rs  reachability.rs  report.rs
src/buchi/: mod.rs
src/cir/: diff.rs  extractor.rs  function_grouper.rs  integration.rs  mir_emitter.rs  mod.rs  naming.rs  net_extract.rs  op_mapping.rs  pipeline.rs  protection.rs  resource_table.rs  tests.rs  types.rs  yaml.rs
src/concurrency/: atomic.rs  barrier.rs  blocking.rs  candvar.rs  channel.rs  condvar.rs  handler.rs  locks.rs  mod.rs
src/detect/: async_bugs.rs  atomic_violation_detector.rs  atomicity_violation.rs  datarace.rs  deadlock.rs  mod.rs
src/detector/: mod.rs  report.rs
src/extern_tools/: lola.rs  mod.rs  tina.rs  tsan.rs
src/graph/: async_task_cfg.rs  callgraph.rs  cpn.rs  cpn_state_graph.rs  function_pn.rs  graph_type.rs  mir_cpn.rs  mir_flml.rs  mir_pn.rs  mirai_callgraph.rs  mod.rs  net_structure.rs  petri_net.rs  pn.rs  pts_cs_graph.rs  pts_graph.rs  pts_inter_graph.rs  pts_test_graph.rs  safedrop.rs  state_graph.rs  time_petri_net.rs  unfolding_net.rs
src/ltl/: automata.rs  expression.rs
src/memory/: mod.rs  ownership.rs  pointsto.rs  pointsto_sound.rs  uninit.rs  unsafe_memory.rs
src/net/: core.rs  ids.rs  incidence.rs  index_vec.rs  io.rs  mod.rs  structure.rs
src/reduce/: mod.rs
src/report/: atomic.rs  deadlock.rs  mod.rs  race.rs
src/translate/: async_context.rs  async_translate.rs  callgraph.rs  key_api.rs  macros.rs  mir_to_pn.rs  mod.rs  petri_net.rs  structure.rs
src/util/: mem_watcher.rs  mir_dot.rs  mod.rs
test/data_race/: data_race_report.txt  stderr.txt
test/double_lock_with_t/: Cargo.toml  output.lola
test/inter/: output.lola
tests/: array_example.rs  async_example.rs  cir_extractor_tests.rs  concurrent_example.rs  cross_fn.rs  flml_ir.json  lib.toml  test_flml  test_flml.rs
toys/call-no-deadlock/: pts_map.dot
toys/candvar-wakeup-ordering/: Cargo.toml
toys/double-deadlock/: Cargo.toml
toys/posion-mutex/: Cargo.toml
(+464 files in other folders)
