[package]
name = "RustPTA"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "pn"
path = "src/main.rs"

[[bin]]
name = "cargo-pn"
path = "src/bin/cargo-check-lock.rs"

[[example]]
name = "memory_watcher_demo"
path = "examples/memory_watcher_demo.rs"

[dependencies]
cargo_metadata = { version = "0.19.0", optional = true }
directories = { version = "5.0.1", optional = true }
rustc_version = { version = "0.4.1", optional = true }
getrandom = { version = "0.2.0", features = ["std"] }
byteorder = "1.3"
env_logger = "0.10.0"
log = "0.4.11"
shell-escape = "0.1.5"
hex = "0.4.0"
rand = "0.8.0"
clap = "4.5.4"
shellwords = "1.1.0"
petgraph = "0.6.0"
bitflags = "2.6.0"
smallvec = "1.8.0"
serde_json = "1.0.81"
serde = { version = "1.0.215", features = ["derive"] }
regex = "1.6.0"
once_cell = "1.13.1"
itertools = "*"
toml = "0.8.19"
thiserror = "*"
anyhow = "*"
nom = "*"
libc = "*"
arrayvec = "*"
humantime = "*"
lazy_static = "*"
log-derive = "*"
rayon = "~1.6.0"
rayon-core = "~1.10.0"
rpds = { version = "*", features = ["serde"] }
rustc_tools_util = "*"


[profile.dev]
incremental = false
panic = "unwind"

[package.metadata.rust-analyzer]
rustc_private = true
