[package]
name = "RustPTA"
version = "0.1.0"
edition = "2024"


# See more keys and their definitions at https:
[[bin]]
name = "pn"
path = "src/main.rs"

[[bin]]
name = "cargo-pn"
path = "src/bin/cargo-check-lock.rs"

[dependencies]
cargo_metadata = { version = "0.23.0", optional = true }
directories = { version = "6.0.0", optional = true }
rustc_version = { version = "0.4.1", optional = true }
getrandom = { version = "0.3.4", features = ["std"] }
byteorder = "1.3"
env_logger = "0.11.8"
log = "0.4.11"
shell-escape = "0.1.5"
hex = "0.4.0"
rand = "0.9.2"
clap = "4.5.4"
shellwords = "1.1.0"
petgraph = "0.8.3"
bitflags = "2.6.0"
smallvec = { version = "1.8.0", features = ["serde"] }
serde_json = "1.0.81"
serde = { version = "1.0.215", features = ["derive"] }
ron = "0.11.0"
regex = "1.6.0"
once_cell = "1.13.1"
itertools = "*"
toml = "0.9.8"
thiserror = "*"
anyhow = "*"
nom = "*"
libc = "*"
indexmap = "2.12.0"
rayon = "1.10"
criterion = { version = "0.7.0", optional = true }
num = { version = "0.4", optional = true }
num-rational = { version = "0.4", optional = true }
num-bigint = { version = "0.4", optional = true }

[features]
default = []
bench = ["criterion"]
inhibitor = []
reset = []
pnml = []
invariants = ["num", "num-rational", "num-bigint"]
atomic-violation = []

[profile.dev]
incremental = false
panic = "unwind"

[package.metadata.rust-analyzer]
rustc_private = true
